fix: rewards css

--- a/anual/src/main/resources/templates/dash/homeIND.html
+++ b/anual/src/main/resources/templates/dash/homeIND.html
@@ -182,7 +182,7 @@
 									data-user-points="${user.points}">${user.points}
 								</p>
 							</div>
-							<div class="my-card d-flex flex-column" style="gap: 15px; height: 350px">
+							<div class="d-flex flex-column" style="gap: 15px; height: 350px">
 								<#list rewards as reward> 
 									<div
 										class="d-flex align-items-center justify-content-between"
