--- a/anual/src/main/resources/templates/dash/homeLE.html
+++ b/anual/src/main/resources/templates/dash/homeLE.html
@@ -132,7 +132,7 @@
 							<p class="points" id="user-points" data-user-points="${user.points}">${user.points}
 							</p>
 						</div>
-						<div class="my-card d-flex flex-column" style="gap: 15px; height: 350px">
+						<div class="d-flex flex-column" style="gap: 15px; height: 350px">
 							<#list rewards as reward>
 								<div class="d-flex align-items-center justify-content-between" style="gap: 30px">
 									<div class="d-flex align-items-center" style="gap: 30px">
