--- a/anual/src/main/resources/templates/landing.html
+++ b/anual/src/main/resources/templates/landing.html
@@ -40,7 +40,7 @@
                             <div style="margin-bottom: 20px">
                                 <h1 class="font-128">
                                     <span class="text-contrast-100">Fighting</span>
-                                    <span class="accent-100">Hunter,</span>
+                                    <span class="accent-100">Hunger,</span>
                                 </h1>
                                 <h1 class="font-128">
                                     <span class="text-contrast-100">Feeding</span>
