Full subscription system

--- a/anual/src/main/resources/templates/dash/homeIND.html
+++ b/anual/src/main/resources/templates/dash/homeIND.html
@@ -125,6 +125,7 @@
 										data-fridge-reserved=${fridge.reserved}
 										data-fridge-state=${fridge.state}
 										data-fridge-meals=${fridge.meals}
+										data-fridge-subscribed="${fridge.subscribed}"
 									>
 										<h4>🧊</h4>
 										<div class="w-100">
