--- a/anual/src/main/resources/templates/dash/homeLE.html
+++ b/anual/src/main/resources/templates/dash/homeLE.html
@@ -40,15 +40,15 @@
 						</svg>
 
 						<div class="my-card d-flex flex-column alerts">
-							<#list temperatures as tmp>
-								<div class="d-flex flex-row align-items-center" style="gap: 30px">
-									<h4>🚨</h4>
-									<div>
-										<h6>Temperature</h6>
-										<p>The ${tmp.fridge} fridge temperature is higher than usual!</p>
+							<#list notifications as not> 
+									<div class="d-flex flex-row align-items-center" style="gap: 30px">
+										<h4>🚨</h4>
+										<div>
+											<h6>Subscription Notification</h6>
+											<p>${not.description}</p>
+										</div>
 									</div>
-								</div>
-							</#list>
+								</#list>
 						</div>
 					</div>
 					<button class="btn-primary" id="contribute-btn" user-type="LE">Contribute</button>
