Landing text updated

--- a/anual/src/main/resources/templates/landing.html
+++ b/anual/src/main/resources/templates/landing.html
@@ -17,7 +17,7 @@
 
     <body>
         <div class="w-100 d-flex flex-column justify-content-center">
-            <div class="w-100 fullscreen-h d-flex justify-content-center hero-bg">
+            <div class="w-100 fullscreen-h d-flex justify-content-center text-contrast-100">
                 <section class="hero-section h-100 d-flex flex-column" style="padding-bottom: 20px">
                     <nav style="margin-bottom: 20px">
                         <div class="d-flex w-100 align-items-center justify-content-between">
@@ -39,25 +39,25 @@
                         <div class="h-100 w-100 d-flex flex-column justify-content-center">
                             <div style="margin-bottom: 20px">
                                 <h1 class="font-128">
-                                    <span class="text-contrast-100">Fighting</span>
+                                    <span class="accent-100">Fighting</span>
                                     <span class="accent-100">Hunger,</span>
                                 </h1>
                                 <h1 class="font-128">
-                                    <span class="text-contrast-100">Feeding</span>
+                                    <span class="accent-100">Feeding</span>
                                     <span class="accent-100">Hope.</span>
                                 </h1>
                             </div>
                             <h5
                                 class="normal text-contrast-200"
-                                style="max-width: 750px; margin-bottom: 50px"
+                                style="max-width: 1000px; margin-bottom: 50px"
                             >
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-                                accumsan suscipit hendrerit. Nullam et auctor magna. Curabitur
-                                lobortis lorem ac malesuada ultricies. In finibus varius ornare.
+                            Together, we combat hunger by connecting those in need with accessible, fresh meals. 
+                            Through collaborative efforts and innovative solutions, Fridge Bridge ensures no food goes to waste, 
+                            and no one goes hungry. Join us in making a difference!
                             </h5>
                             <div class="d-flex align-items-center" style="gap: 80px">
                                 <a href="/register/login" class="btn-primary hero-btn-left"
-                                    >Get food</a
+                                    >Log in</a
                                 >
                                 <a href="/register/signup" class="btn-primary hero-btn-right"
                                     >Be a collaborator</a
@@ -107,9 +107,12 @@
                     </h1>
                     <div class="header-line"></div>
                     <h5 class="normal text-200" style="margin-bottom: 60px">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan
-                        suscipit hendrerit. Nullam et auctor magna. Curabitur lobortis lorem ac
-                        malesuada ultricies. In finibus varius ornare.
+                        Your contribution can transform lives. Whether you're a business willing 
+                        to donate meals, an individual ready to lend a hand, a legal entity ready to partner with us
+                        by providing new fridges or a technician eager 
+                        to keep our refrigerators running smoothly, there’s a place for you at Fridge 
+                        Bridge. Make a monetary donation, donate food, or volunteer your time and skills 
+                        to help us maintain and expand this vital network. Together, we can make sustainable change.
                     </h5>
                     <div class="w-100 bg-accent-300 rounded" style="padding: 20px">
                         <img src="/public/assets/landing/campaign.png" alt="" width="100%" />
@@ -135,23 +138,16 @@
                         <div class="header-line"></div>
 
                         <div class="d-flex" style="gap: 40px; flex-wrap: wrap">
-                            <img
-                                src="/public/assets/landing/about-us.png"
-                                alt=""
-                                class="w-100 h-100"
-                            />
                             <h5 class="normal">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-                                accumsan suscipit hendrerit. Nullam et auctor magna. Curabitur
-                                lobortis lorem ac malesuada ultricies. In finibus varius ornare.
-                                Donec in laoreet tortor. Maecenas euismod nisi vitae tortor luctus
-                                malesuada. Donec posuere, lacus at scelerisque pretium, nulla felis
-                                molestie neque, sed auctor risus elit nec leo. Nam felis sapien,
-                                blandit vitae congue non, luctus elementum massa. Quisque tempus
-                                nibh turpis, non laoreet diam iaculis vitae. Ut nunc velit, vehicula
-                                vel pellentesque nec, lobortis et velit. Ut bibendum interdum eros
-                                eu lobortis. Pellentesque facilisis lobortis mauris. Ut vitae purus
-                                justo.
+                                Fridge Bridge is a community-powered initiative dedicated to 
+                                ending hunger through shared resources. We manage public refrigerators 
+                                supported by local collaborators, ensuring surplus food 
+                                reaches those who need it most. Our network includes legal entities, individuals, 
+                                and technicians who keep the system running with seamless efficiency. By 
+                                integrating smart technology like sensor alerts, we maintain optimal refrigerator 
+                                conditions and respond quickly to any maintenance needs. At Fridge Bridge, we 
+                                believe everyone deserves access to nutritious food, and we work tirelessly to 
+                                make this belief a reality.
                             </h5>
                         </div>
                     </div>
