Simple color adjustments

--- a/anual/src/main/resources/public/css/base.css
+++ b/anual/src/main/resources/public/css/base.css
@@ -139,6 +139,10 @@ p {
 	background-color: var(--accent-300);
 }
 
+.bg-accent-400 {
+	background-color: var(--accent-400);
+}
+
 .rounded {
 	border-radius: 8px !important;
 }
