--- a/anual/src/main/resources/templates/landing.html
+++ b/anual/src/main/resources/templates/landing.html
@@ -17,7 +17,7 @@
 
     <body>
         <div class="w-100 d-flex flex-column justify-content-center">
-            <div class="w-100 fullscreen-h d-flex justify-content-center text-contrast-100">
+            <div class="w-100 fullscreen-h d-flex justify-content-center hero-bg">
                 <section class="hero-section h-100 d-flex flex-column" style="padding-bottom: 20px">
                     <nav style="margin-bottom: 20px">
                         <div class="d-flex w-100 align-items-center justify-content-between">
@@ -39,11 +39,11 @@
                         <div class="h-100 w-100 d-flex flex-column justify-content-center">
                             <div style="margin-bottom: 20px">
                                 <h1 class="font-128">
-                                    <span class="accent-100">Fighting</span>
+                                    <span class="text-contrast-100">Fighting</span>
                                     <span class="accent-100">Hunger,</span>
                                 </h1>
                                 <h1 class="font-128">
-                                    <span class="accent-100">Feeding</span>
+                                    <span class="text-contrast-100">Feeding</span>
                                     <span class="accent-100">Hope.</span>
                                 </h1>
                             </div>
@@ -102,7 +102,7 @@
             <div class="section-space" style="margin-top: 0px"></div>
             <div class="d-flex justify-content-center w-100" style="flex-wrap: wrap">
                 <section>
-                    <h1 class="font-100 text-contrast-100">
+                    <h1 class="font-100 accent-100">
                         Support the <span class="accent-100">Community</span>
                     </h1>
                     <div class="header-line"></div>
