--- a/anual/src/main/resources/public/css/landing.css
+++ b/anual/src/main/resources/public/css/landing.css
@@ -4,7 +4,7 @@
 :root {
 	--landing-bg: #dcf1fc;
 	--nav-link-color: #ffffff;
-	--hero-bg: #b3e1f8;
+	--hero-bg: #67b3da;
 	--hero-desc: #f1f1f1;
 }
 
@@ -88,7 +88,7 @@ nav {
 }
 
 .hero-btn-left {
-	background-color: #c9e9f9;
+	background-color: #136c91;
 }
 
 .hero-btn-left:hover {
