--- a/anual/src/main/resources/templates/dash/homeLE.html
+++ b/anual/src/main/resources/templates/dash/homeLE.html
@@ -88,6 +88,8 @@
 									id="fridge"
 									data-fridge-name=${fridge.name}
 									data-fridge-id=${fridge.id}
+									data-fridge-lat=${fridge.lat}
+									data-fridge-lon=${fridge.lon}
 									data-fridge-temp=${fridge.temp}
 									data-fridge-reserved=${fridge.reserved}
 									data-fridge-state=${fridge.state}
