--- a/anual/src/main/resources/templates/register/signupIND.html
+++ b/anual/src/main/resources/templates/register/signupIND.html
@@ -34,7 +34,7 @@
                     />
 
                     <select name="type" required value="Who are you?" style="width: 30%">
-                        <option selected disabled hidden>Register as</option>
+                        <option selected value="" disabled hidden>Register as</option>
                         <option value="Contributor" class="desplegables">Contributor</option>
                         <option value="Technician" class="desplegables">Technician</option>
                     </select>
