--- a/anual/src/main/resources/templates/register/signupLE.html
+++ b/anual/src/main/resources/templates/register/signupLE.html
@@ -41,7 +41,7 @@
 
                 <div class="d-flex w-100" style="gap: 10px">
                     <select required name="org-type" value="Organization Type" class="w-100">
-                        <option selected disabled hidden>Organization Type</option>
+                        <option selected value="" disabled hidden>Organization Type</option>
                         <option value="Governmental">Governmental</option>
                         <option value="NGO">NGO</option>
                         <option value="Company">Company</option>
@@ -49,7 +49,7 @@
                     </select>
 
                     <select required name="org-category" value="Organization Category" class="w-100">
-                        <option selected disabled hidden>Organization Category</option>
+                        <option selected value="" disabled hidden>Organization Category</option>
                         <option value="HealthCare">Health Care</option>
                         <option value="Education">Education</option>
                         <option value="Finance">Finance</option>
