Add visit shortcut created

--- a/anual/src/main/resources/templates/landing.html
+++ b/anual/src/main/resources/templates/landing.html
@@ -130,6 +130,7 @@
                     <div
                         class="bg-accent-200 rounded-x2"
                         style="padding-inline: 60px; padding-block: 100px"
+                        id="about-us"
                     >
                         <h1 class="text-contrast-100" style="margin-bottom: 50px">
                             Who we <span class="accent-100">are</span> and what we
