--- a/anual/src/main/resources/templates/dash/homeADMIN.html
+++ b/anual/src/main/resources/templates/dash/homeADMIN.html
@@ -4,6 +4,80 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>FridgeBridge - Admin</title>
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+            crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="/public/css/home.css" />
+        <link rel="stylesheet" href="/public/css/forms.css" />
+        <link rel="stylesheet" href="/public/css/base.css" />
+        <link
+            rel="stylesheet"
+            href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+            integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+            crossorigin=""
+        />
+        <!-- Make sure you put this AFTER Leaflet's CSS -->
+        <script
+            src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+            integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+            crossorigin=""
+        ></script>
     </head>
-    <body></body>
+    <body>
+        <div class="fullscreen overflow-auto" style="max-height: 100vh">
+			<div
+				class="d-flex flex-column w-100"
+				style="max-width: 1280px; margin: auto; gap: 30px; padding: 50px"
+			>
+				<#if error??>
+					<div class="error-container">
+						<p style="color: red">${error}</p>
+					</div>
+				</#if>
+				<div
+					class="d-flex flex-row justify-content-between align-items-center w-100"
+					style="margin-bottom: 20px"
+				>
+					<div class="d-flex flex-column gap-3">
+						<h4>Hello Admin 👋</h4>
+						<p>We hope you have a nice day!</p>
+					</div>
+					<div class="d-flex flex-row align-items-center" style="gap: 30px">
+					    <button onclick="deleteCookieAndRefresh()" type="button" class="btn btn-light" id="logout-btn">Log Out</button>
+					</div>
+				</div>
+
+                <div class="d-flex flex-column w-100" style="gap: 100px">
+                    <div class="d-flex flex-row w-100 flex-wrap" style="gap: 50px">
+                        <div class="d-flex flex-column flex-grow-1" style="min-width: 300px">
+                            <div class="mb-3">
+                                <h4>Reports</h4>
+                                <p>A history list of all the reports</p>
+                            </div>
+                            <div
+                                class="my-card d-flex flex-column"
+                                style="gap: 30px; height: 350px"
+                            >
+                                <#list reports as report> 
+                                    <div
+                                        class="d-flex align-items-center"
+                                        style="gap: 30px"
+                                    >
+                                        <h4>${report.emoji}</h4>
+                                        <div>
+                                            <h6>${report.id}</h6>
+                                            <p>${report.createdAt}</p>
+                                        </div>
+                                    </div>
+                                </#list>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
