Fridge creation state changed and MD shortcut implemented

--- a/anual/src/main/resources/templates/dash/homeIND.html
+++ b/anual/src/main/resources/templates/dash/homeIND.html
@@ -127,7 +127,10 @@
 										data-fridge-reserved=${fridge.reserved}
 										data-fridge-state=${fridge.state}
 										data-fridge-meals=${fridge.meals}
+										data-fridge-capacity="${fridge.capacity}"
 										data-fridge-subscribed="${fridge.subscribed}"
+										data-user-type="IND"
+										data-fridge-address="${fridge.address}"
 									>
 										<h4>🧊</h4>
 										<div class="w-100">
