--- a/anual/src/main/resources/templates/dash/homeTECH.html
+++ b/anual/src/main/resources/templates/dash/homeTECH.html
@@ -77,6 +77,7 @@
 									data-fridge-temp=${fridge.temp}
 									data-fridge-reserved=${fridge.reserved}
 									data-fridge-state=${fridge.state}
+									data-fridge-capacity="${fridge.capacity}"
 									data-fridge-meals=${fridge.meals}>
 									<h4>🧊</h4>
 									<div class="w-100">
