--- a/anual/src/main/resources/templates/dash/homeLE.html
+++ b/anual/src/main/resources/templates/dash/homeLE.html
@@ -94,7 +94,9 @@
 									data-fridge-reserved=${fridge.reserved}
 									data-fridge-state=${fridge.state}
 									data-fridge-meals=${fridge.meals}
+									data-fridge-capacity="${fridge.capacity}"
 									data-fridge-subscribed="${fridge.subscribed}"
+									data-user-type="LE"
 								>
 									<h4>🧊</h4>
 									<div class="w-100">
