--- a/anual/src/main/resources/templates/dash/homeTECH.html
+++ b/anual/src/main/resources/templates/dash/homeTECH.html
@@ -21,8 +21,11 @@
 	<div class="fullscreen overflow-auto" style="max-height: 100vh">
 		<div class="d-flex flex-column w-100" style="max-width: 1280px; margin: auto; gap: 30px; padding: 50px">
 			<#if error??>
-				<div class="error-container">
-					<p style="color: red">${error}</p>
+				<div class="alert alert-danger alert-dismissible fade show" id="error-alert" role="alert" style="position: absolute; top: 0; left: 0; right: 0; z-index: 1000; margin: auto; margin-top: 10px; width: 50%;">
+					<strong>Oh snap!</strong> ${error}
+					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
 				</div>
 			</#if>
 			<div class="d-flex flex-row justify-content-between align-items-center w-100" style="margin-bottom: 20px">
