Mensajes de error mejorados

--- a/anual/src/main/resources/templates/dash/homeLE.html
+++ b/anual/src/main/resources/templates/dash/homeLE.html
@@ -19,7 +19,11 @@
 
 <body>
 	<div class="fullscreen overflow-auto" style="max-height: 100vh">
-		<div class="d-flex flex-column w-100" style="max-width: 1280px; margin: auto; gap: 30px; padding: 50px">
+		<div
+			class="d-flex flex-column w-100"
+			style="max-width: 1280px; margin: auto; gap: 30px; padding: 50px"
+			id="contenedorDeAlertas"
+		>
 			<#if error??>
 				<div class="alert alert-danger alert-dismissible fade show" id="error-alert" role="alert" style="position: absolute; top: 0; left: 0; right: 0; z-index: 1000; margin: auto; margin-top: 10px; width: 50%;">
 					<strong>Oh snap!</strong> ${error}
@@ -183,5 +187,8 @@
 
 <script src="/public/js/forms.js"></script>
 <script src="/public/js/modal.js"></script>
+<script src="/public/js/error.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
 
 </html>
