--- a/anual/src/main/resources/templates/dash/homeIND.html
+++ b/anual/src/main/resources/templates/dash/homeIND.html
@@ -32,6 +32,7 @@
 			<div
 				class="d-flex flex-column w-100"
 				style="max-width: 1280px; margin: auto; gap: 30px; padding: 50px"
+				id="contenedorDeAlertas"
 			>
 				<#if error??>
 					<div class="alert alert-danger alert-dismissible fade show" id="error-alert" role="alert" style="position: absolute; top: 0; left: 0; right: 0; z-index: 1000; margin: auto; margin-top: 10px; width: 50%;">
