--- a/anual/src/main/resources/templates/dash/homeTECH.html
+++ b/anual/src/main/resources/templates/dash/homeTECH.html
@@ -116,5 +116,8 @@
 
 <script src="/public/js/forms.js"></script>
 <script src="/public/js/modal_tech.js"></script>
+<script src="/public/js/error.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
 
 </html>
