--- a/anual/src/main/resources/templates/landing.html
+++ b/anual/src/main/resources/templates/landing.html
@@ -26,8 +26,8 @@
                                 <h5 class="accent-100 normal">FridgeBridge</h5>
                             </div>
                             <div class="d-flex align-items-center" style="gap: 40px">
-                                <a href="#about-us" class="nav-link">About us</a>
-                                <a href="#campaign" class="nav-link">Campaign</a>
+                                <a href="/api/contributors/recognitions?min_points=50&min_meals=1&size=3" class="nav-link">Extra service</a>
+                                <a href="/docs/" class="nav-link">Documentation</a>
                                 <a href="#contact" class="nav-link">Concat us</a>
                             </div>
                         </div>
