--- a/anual/src/main/resources/templates/dash/homeADMIN.html
+++ b/anual/src/main/resources/templates/dash/homeADMIN.html
@@ -26,11 +26,13 @@
             crossorigin=""
         ></script>
     </head>
+
     <body>
         <div class="fullscreen overflow-auto" style="max-height: 100vh">
 			<div
 				class="d-flex flex-column w-100"
 				style="max-width: 1280px; margin: auto; gap: 30px; padding: 50px"
+                id="contenedorDeAlertas"
 			>
 				<#if error??>
                     <div class="alert alert-danger alert-dismissible fade show" id="error-alert" role="alert" style="position: absolute; top: 0; left: 0; right: 0; z-index: 1000; margin: auto; margin-top: 10px; width: 50%;">
@@ -53,31 +55,31 @@
 					</div>
 				</div>
 
-                <div class="d-flex flex-column w-100" style="gap: 100px">
-                    <div class="d-flex flex-row w-100 flex-wrap" style="gap: 50px">
-                        <div class="d-flex flex-column flex-grow-1" style="min-width: 300px">
-                            <div class="mb-3">
-                                <h4>Reports</h4>
-                                <p>A history list of all the reports</p>
-                            </div>
+                <div class="d-flex flex-column flex-grow-1" style="min-width: 300px">
+                    <div class="mb-3">
+                        <h4>Reports</h4>
+                        <p>A history list of all the reports</p>
+                    </div>
+                    <div
+                        class="my-card d-flex flex-column"
+                        style="gap: 30px; height: 350px"
+                    >
+                        <#list reports as report> 
                             <div
-                                class="my-card d-flex flex-column"
-                                style="gap: 30px; height: 350px"
+                                class="d-flex align-items-center my-card-item"
+                                style="gap: 30px"
+                                id="report"
+                                data-report-id="${report.reportId}"
+                                data-from-date="${report.fromDate}"
+                                data-to-date="${report.toDate}"
                             >
-                                <#list reports as report> 
-                                    <div
-                                        class="d-flex align-items-center"
-                                        style="gap: 30px"
-                                    >
-                                        <h4>${report.emoji}</h4>
-                                        <div>
-                                            <h6>${report.id}</h6>
-                                            <p>${report.createdAt}</p>
-                                        </div>
-                                    </div>
-                                </#list>
+                                <h4>${Reportsemoji}</h4>
+                                <div>
+                                    <h6>Report ${report.reportId}</h6>
+                                    <p id="report-description"></p>
+                                </div>
                             </div>
-                        </div>
+                        </#list>
                     </div>
                 </div>
 
@@ -113,6 +115,19 @@
             </div>
         </div>
     </body>
+
+    <div class="modal" id="modal">
+		<div
+			class="my-card d-flex flex-column justify-content-center overflow-auto"
+			style="width: 650px; max-height: 100%"
+		>
+			<p class="small accent-100 align-self-end btn" id="modal-close">X</p>
+			<div class="my-modal-content" id="modal-content"></div>
+		</div>
+	</div>
+
+    <script src="/public/js/modal_admin.js"></script>
+    <script src="/public/js/error.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
 </html>
