--- a/anual/src/main/resources/templates/dash/homeADMIN.html
+++ b/anual/src/main/resources/templates/dash/homeADMIN.html
@@ -56,9 +56,15 @@
 				</div>
 
                 <div class="d-flex flex-column flex-grow-1" style="min-width: 300px">
-                    <div class="mb-3">
-                        <h4>Reports</h4>
-                        <p>A history list of all the reports</p>
+                    <div class="d-flex align-items-center justify-content-between" style="gap: 30px">
+                        <div class="mb-3">
+                            <h4>Reports</h4>
+                            <p>A history list of all the reports</p>
+                        </div>
+                        <div>
+                            <button type="button" class="btn btn-primary" id="create-report-btn">Create report</button>
+                            <button type="button" class="btn btn-primary" id="new-frequency-btn">New frequency</button>
+                        </div>
                     </div>
                     <div
                         class="my-card d-flex flex-column"
@@ -111,6 +117,45 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Sign new admins -->
+                <div class="d-flex flex-column w-100" style="gap: 100px">
+                    <div class="d-flex flex-row w-100 flex-wrap" style="gap: 50px">
+                        <div class="d-flex flex-column flex-grow-1" style="min-width: 300px">
+                            <div class="mb-3">
+                                <h4>Sign new admins</h4>
+                                <p>Fill the form to sign a new admin</p>
+                            </div>
+                            <form action="/admin/signAdmin" method="post">
+                                <div class="my-card d-flex flex-column" style="gap: 30px">
+                                    <div class="form-group">
+                                        <label for="email">Email</label>
+                                        <input
+                                            type="email"
+                                            name="email"
+                                            class="form-control"
+                                            id="email"
+                                            required
+                                        />
+                                    </div>
+                                    <div class="form-group
+                                        <label for="password">Password</label>
+                                        <input
+                                            type="password"
+                                            name="password"
+                                            class="form-control"
+                                            id="password"
+                                            required
+                                        />
+                                    </div>
+                                    <div class="d-flex flex-row justify-content-end">
+                                        <button type="submit" class="btn btn-primary">Submit</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>              
 
             </div>
         </div>
