feat: social login front-end

--- a/anual/src/main/resources/templates/dash/homeTECH.html
+++ b/anual/src/main/resources/templates/dash/homeTECH.html
@@ -31,7 +31,7 @@
 			<div class="d-flex flex-row justify-content-between align-items-center w-100" style="margin-bottom: 20px">
 				<div class="d-flex flex-column gap-3">
 					<h4>Hello ${user.name} 👋</h4>
-					<p>Thanks for beeing our technician</p>
+					<p>Thanks for being our technician</p>
 				</div>
 				<div class="d-flex flex-row align-items-center" style="gap: 30px">
 					<div class="position-relative alerts-container">
