--- a/anual/src/main/resources/public/css/home.css
+++ b/anual/src/main/resources/public/css/home.css
@@ -2,21 +2,31 @@ body {
 	overflow: hidden;
 }
 
-.alerts {
+.hover-modal {
 	position: absolute;
-	gap: 30px;
 	width: 320px;
 	max-height: 300px;
-	padding: 20px;
+	min-height: 100px;
+	padding: 0 !important;
 	right: 0;
 	opacity: 0;
 	z-index: -1;
 	transition: all 0.2s;
 }
 
-.alerts-container:hover > .alerts {
+.hover-modal-container:hover > .hover-modal {
 	opacity: 1;
 	z-index: 1;
+}
+
+.social-login-item {
+	cursor: pointer;
+	padding: 10px;
+	transition: all 0.2s;
+}
+
+.social-login-item:hover {
+	background-color: #f1f1f1;
 }
 
 .points {
