--- a/anual/src/main/resources/templates/dash/homeIND.html
+++ b/anual/src/main/resources/templates/dash/homeIND.html
@@ -25,6 +25,7 @@
 			integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
 			crossorigin=""
 		></script>
+		<script src="https://apis.google.com/js/platform.js" async defer></script>
 	</head>
 
 	<body>
@@ -51,7 +52,7 @@
 						<p>We hope you have a nice day!</p>
 					</div>
 					<div class="d-flex flex-row align-items-center" style="gap: 30px">
-						<div class="position-relative alerts-container">
+						<div class="position-relative hover-modal-container">
 							<svg
 								xmlns="http://www.w3.org/2000/svg"
 								viewBox="0 0 24 24"
@@ -66,9 +67,9 @@
 								/>
 							</svg>
 
-							<div class="my-card d-flex flex-column alerts">
+							<div class="my-card d-flex flex-column hover-modal">
 								<#list notifications as not> 
-									<div class="d-flex flex-row align-items-center" style="gap: 30px">
+									<div class="d-flex flex-row align-items-center" style="gap: 30px; padding: 10px;">
 										<h4>🚨</h4>
 										<div>
 											<h6>Notification</h6>
@@ -78,9 +79,28 @@
 								</#list>
 							</div>
 						</div>
-						<button class="btn-primary" id="contribute-btn"  user-type="IND" >Contribute</button>
-					<button onclick="deleteCookieAndRefresh()" type="button" class="btn btn-light" id="logout-btn">Log Out</button>
-						
+						<button class="btn-primary" id="contribute-btn" user-type="IND" >Contribute</button>
+						<button onclick="deleteCookieAndRefresh()" type="button" class="btn btn-light" id="logout-btn">Log Out</button>
+
+						<div class="position-relative hover-modal-container">
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6" style="height: 30px; color: var(--gray)">
+								<path fill-rule="evenodd" d="M7.5 6a4.5 4.5 0 1 1 9 0 4.5 4.5 0 0 1-9 0ZM3.751 20.105a8.25 8.25 0 0 1 16.498 0 .75.75 0 0 1-.437.695A18.683 18.683 0 0 1 12 22.5c-2.786 0-5.433-.608-7.812-1.7a.75.75 0 0 1-.437-.695Z" clip-rule="evenodd" />
+							</svg>
+							<div class="my-card d-flex flex-column hover-modal">
+								<div class="d-flex flex-row align-items-center social-login-item" id="google-connect-btn" style="gap: 30px">
+									<img src="/public/assets/brands/google.png" height="48" width ="48" />
+									<div>
+										<p>Connect your google account</p>
+									</div>
+								</div>
+								<div class="d-flex flex-row align-items-center social-login-item" id="github-connect-btn" data-provider="github" style="gap: 30px">
+									<img src="/public/assets/brands/github.png" height="48" width ="48" />
+									<div>
+										<p>Connect your github account</p>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 
