fix: alerts in dashboards

--- a/anual/src/main/resources/templates/dash/homeTECH.html
+++ b/anual/src/main/resources/templates/dash/homeTECH.html
@@ -34,7 +34,7 @@
 					<p>Thanks for being our technician</p>
 				</div>
 				<div class="d-flex flex-row align-items-center" style="gap: 30px">
-					<div class="position-relative alerts-container">
+					<div class="position-relative hover-modal-container">
 						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6"
 							style="height: 30px; color: var(--gray)">
 							<path fill-rule="evenodd"
