--- a/anual/src/main/resources/templates/dash/homeLE.html
+++ b/anual/src/main/resources/templates/dash/homeLE.html
@@ -38,7 +38,7 @@
 					<p>We hope you have a nice day!</p>
 				</div>
 				<div class="d-flex flex-row align-items-center" style="gap: 30px">
-					<div class="position-relative alerts-container">
+					<div class="position-relative hover-modal-container">
 						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6"
 							style="height: 30px; color: var(--gray)">
 							<path fill-rule="evenodd"
@@ -46,7 +46,7 @@
 								clip-rule="evenodd" />
 						</svg>
 
-						<div class="my-card d-flex flex-column alerts">
+						<div class="my-card d-flex flex-column hover-modal">
 							<#list notifications as not> 
 									<div class="d-flex flex-row align-items-center" style="gap: 30px">
 										<h4>🚨</h4>
