--- a/anual/src/main/resources/public/css/landing.css
+++ b/anual/src/main/resources/public/css/landing.css
@@ -202,3 +202,45 @@ nav {
         width: 100%; 
     }
 }
+
+@media (max-width: 700px) {
+    .font-128 {
+        font-size: 60px; 
+        line-height: 68px; 
+    }
+
+    .font-100 {
+        font-size: 23px; 
+        line-height: 26px; 
+    }
+
+    .hero-btn-left,
+    .hero-btn-right {
+        width: 100%;
+        height: 50px; 
+        font-size: 12px; 
+    }
+
+    .cta-btn {
+        font-size: 13px; 
+        width: 187px; 
+        height: 56px; 
+    }
+
+	.cta-header {
+		line-height: 90px;
+	}
+
+    h5 {
+        line-height: 22px; 
+		font-size: 13px;
+    }
+
+    .header-line {
+        width: 100%; 
+    }
+
+	.span-2 {
+		font-size: 40px;
+	}
+}
