--- a/anual/src/main/resources/templates/dash/homeTECH.html
+++ b/anual/src/main/resources/templates/dash/homeTECH.html
@@ -21,7 +21,8 @@
 	<div class="fullscreen overflow-auto" style="max-height: 100vh">
 		<div class="d-flex flex-column w-100" style="max-width: 1280px; margin: auto; gap: 30px; padding: 50px">
 			<#if error??>
-				<div class="alert alert-danger alert-dismissible fade show" id="error-alert" role="alert" style="position: absolute; top: 0; left: 0; right: 0; z-index: 1000; margin: auto; margin-top: 10px; width: 50%;">
+				<div class="alert alert-danger alert-dismissible fade show" id="error-alert" role="alert"
+					style="position: absolute; top: 0; left: 0; right: 0; z-index: 1000; margin: auto; margin-top: 10px; width: 50%;">
 					<strong>Oh snap!</strong> ${error}
 					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
@@ -41,8 +42,20 @@
 								d="M5.25 9a6.75 6.75 0 0 1 13.5 0v.75c0 2.123.8 4.057 2.118 5.52a.75.75 0 0 1-.297 1.206c-1.544.57-3.16.99-4.831 1.243a3.75 3.75 0 1 1-7.48 0 24.585 24.585 0 0 1-4.831-1.244.75.75 0 0 1-.298-1.205A8.217 8.217 0 0 0 5.25 9.75V9Zm4.502 8.9a2.25 2.25 0 1 0 4.496 0 25.057 25.057 0 0 1-4.496 0Z"
 								clip-rule="evenodd" />
 						</svg>
+						<div class="my-card d-flex flex-column hover-modal">
+							<#list alerts as alert>
+								<div class="d-flex flex-row align-items-center" style="gap: 30px; padding: 10px;">
+									<h4>🚨</h4>
+									<div>
+										<h6>Incident alert</h6>
+										<p>${alert}</p>
+									</div>
+								</div>
+							</#list>
+						</div>
 					</div>
-					<button onclick="deleteCookieAndRefresh()" type="button" class="btn btn-light" id="logout-btn"  user-type="IND" >Log Out</button>
+					<button onclick="deleteCookieAndRefresh()" type="button" class="btn btn-light" id="logout-btn"
+						user-type="IND">Log Out</button>
 				</div>
 			</div>
 
@@ -73,14 +86,10 @@
 						<div class="my-card d-flex flex-column" style="gap: 30px; height: 350px">
 							<#list fridges as fridge>
 								<div class="d-flex align-items-center my-card-item" style="gap: 30px" id="fridge"
-									data-fridge-name=${fridge.name}
-									data-fridge-id=${fridge.id}
-									data-fridge-lat=${fridge.lat}
-									data-fridge-lon=${fridge.lon}
-									data-fridge-temp=${fridge.temp}
-									data-fridge-reserved=${fridge.reserved}
-									data-fridge-state=${fridge.state}
-									data-fridge-capacity="${fridge.capacity}"
+									data-fridge-name=${fridge.name} data-fridge-id=${fridge.id}
+									data-fridge-lat=${fridge.lat} data-fridge-lon=${fridge.lon}
+									data-fridge-temp=${fridge.temp} data-fridge-reserved=${fridge.reserved}
+									data-fridge-state=${fridge.state} data-fridge-capacity="${fridge.capacity}"
 									data-fridge-meals=${fridge.meals}>
 									<h4>🧊</h4>
 									<div class="w-100">
