--- a/anual/src/main/resources/templates/register/signupIND.html
+++ b/anual/src/main/resources/templates/register/signupIND.html
@@ -79,6 +79,14 @@
                     placeholder="Your birthdate..."
                     class="inputs"
                 />
+                <input
+                    type="text"
+                    id="address"
+                    name="address"
+                    required
+                    placeholder="Your address..."
+                    class="inputs"
+                />
 
                 <#if error??>
                     <div style="color: red">${error}</div>
