--- a/anual/src/main/resources/templates/register/signupLE.html
+++ b/anual/src/main/resources/templates/register/signupLE.html
@@ -69,7 +69,7 @@
                 />
                 <input
                     type="password"
-                    id="contrasenaConfirmada"
+                    id="confirmedPassword"
                     required
                     placeholder="Your password again..."
                     class="inputs"
@@ -79,7 +79,7 @@
                     <div style="color: red">${error}</div>
                 </#if>
                 <div class="form-btns-container">
-                    <button type="submit" class="btn-text w-100" onclick="validar()">Accept</button>
+                    <button type="button" class="btn-text w-100" onclick="validar()">Accept</button>
                 </div>
             </form>
         </div>
