Form problem with id=name

--- a/anual/src/main/resources/templates/register/signupIND.html
+++ b/anual/src/main/resources/templates/register/signupIND.html
@@ -42,7 +42,7 @@
 
                 <input
                     type="text"
-                    id="name"
+                    id="personName"
                     name="name"
                     required
                     placeholder="Your full name..."
