--- a/anual/src/main/resources/templates/register/signupLE.html
+++ b/anual/src/main/resources/templates/register/signupLE.html
@@ -32,7 +32,7 @@
                 />
                 <input
                     type="text"
-                    id="name"
+                    id="personName"
                     name="name"
                     required
                     placeholder="Organization name..."
