--- a/anual/src/main/resources/templates/register/signupLE.html
+++ b/anual/src/main/resources/templates/register/signupLE.html
@@ -33,7 +33,7 @@
                 <input
                     type="text"
                     id="personName"
-                    name="personName"
+                    name="name"
                     required
                     placeholder="Organization name..."
                     class="inputs"
