feat: render providers from server

--- a/anual/src/main/resources/templates/dash/homeIND.html
+++ b/anual/src/main/resources/templates/dash/homeIND.html
@@ -88,19 +88,19 @@
 								<path fill-rule="evenodd" d="M7.5 6a4.5 4.5 0 1 1 9 0 4.5 4.5 0 0 1-9 0ZM3.751 20.105a8.25 8.25 0 0 1 16.498 0 .75.75 0 0 1-.437.695A18.683 18.683 0 0 1 12 22.5c-2.786 0-5.433-.608-7.812-1.7a.75.75 0 0 1-.437-.695Z" clip-rule="evenodd" />
 							</svg>
 							<div class="my-card d-flex flex-column hover-modal">
-								<div class="d-flex flex-row align-items-center social-login-item" onclick="handleGoogleConnection()" style="gap: 30px">
-									<div id="google-btn-wrapper" style="display: none;"></div>
-									<img src="/public/assets/brands/google.png" height="48" width ="48" />
-									<div>
-										<p>Connect your google account</p>
+								<div id="google-btn-wrapper" style="display: none;"></div>
+								<#list providers as provider> 
+									<div id="provider-connect-${provider.provider}" class="d-flex flex-row align-items-center social-login-item" style="gap: 30px" onclick="handleProviderConnection('${provider.provider}')">
+										<img src="${provider.img}" height="48" width="48" alt="${provider.provider} logo" />
+										<div>
+											<#if provider.connected>
+												<p>Your ${provider.provider} account is connected</p>
+											<#else>
+												<p>Connect your ${provider.provider} account</p>
+											</#if>
+										</div>
 									</div>
-								</div>
-								<div class="d-flex flex-row align-items-center social-login-item" id="github-connect-btn" data-provider="github" style="gap: 30px">
-									<img src="/public/assets/brands/github.png" height="48" width ="48" />
-									<div>
-										<p>Connect your github account</p>
-									</div>
-								</div>
+								</#list>
 							</div>
 						</div>
 					</div>
