feat: github connection

--- a/anual/src/main/resources/templates/dash/homeIND.html
+++ b/anual/src/main/resources/templates/dash/homeIND.html
@@ -94,9 +94,9 @@
 										<img src="${provider.img}" height="48" width="48" alt="${provider.provider} logo" />
 										<div>
 											<#if provider.connected>
-												<p>Your ${provider.provider} account is connected</p>
+												<p>Your ${provider.provider} account is connected. Update it if needed.</p>
 											<#else>
-												<p>Connect your ${provider.provider} account</p>
+												<p>Connect your ${provider.provider} account.</p>
 											</#if>
 										</div>
 									</div>
