--- a/anual/src/main/resources/templates/register/login.html
+++ b/anual/src/main/resources/templates/register/login.html
@@ -49,14 +49,14 @@
 					<button type="submit" class="btn-primary w-100">Log in</button>
 				</div>
 				<div class="d-flex flex-row w-100" style="gap: 10px;">
-					<div class="d-flex flex-row align-items-center provider-btn w-100" id="google-connect-btn" onclick="handleGoogleConnection()" style="gap: 30px">
+					<div id="google-login-btn" class="d-flex flex-row align-items-center provider-btn w-100"" style="gap: 30px">
 						<div id="google-btn-wrapper" style="display: none;"></div>
 						<img src="/public/assets/brands/google.png" height="48" width ="48" />
 						<div>
 							<p>Login with Google</p>
 						</div>
 					</div>
-					<div class="d-flex flex-row align-items-center provider-btn provider-btn-github w-100"  style="gap: 30px">
+					<div id="github-login-btn" class="d-flex flex-row align-items-center provider-btn provider-btn-github w-100" style="gap: 30px">
 						<img src="/public/assets/brands/github-white.png" height="40" width ="40" style="margin-left: 5px;" />
 						<div>
 							<p>Login with Github</p>
